src-ken&y/objects/Bank_Transaction__c.object
<CustomObject>
    <customHelpPage>HelpManageBankTransactions</customHelpPage>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount received or paid (in bank account currency; may have been converted by bank)</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <errorMessage>Please populate correct bank account which is related to associated company.</errorMessage>
            <filterItems>
                <field>$Source.Company__c</field>
                <operation>equals</operation>
                <valueField>Bank_Account__c.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Company__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Bank_Account__c.Company__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>Bank Transactions</relationshipLabel>
        <relationshipName>Bank_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Statement_Code__c</fullName>
        <label>DEPRECATED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stopped</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>NSF</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Receipt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Transaction_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Bank transaction group for bank transactions</description>
        <label>Bank Transaction Group</label>
        <referenceTo>Bank_Transaction_Group__c</referenceTo>
        <relationshipLabel>Bank Transactions</relationshipLabel>
        <relationshipName>Bank_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Categorization_Code__c</fullName>
        <description>Code Yodlee passes to enable categorization for accounting</description>
        <label>DEPRECATED</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Bank Transactions</relationshipLabel>
        <relationshipName>Bank_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Bank Transactions</relationshipLabel>
        <relationshipName>Bank_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <label>Exceptions Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finalized_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalized_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DO NOT PUT on page layout, it is hidden field to control user click.</description>
        <label>Finalized Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <formula>Bank_Transaction_Group__r.Finalized__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <formula>Exceptions_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <formula>Bank_Transaction_Group__r.Historical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Match_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <description>Description from payment, receipt</description>
        <label>Memo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>The type of activity in the account.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>EFT</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Date__c</fullName>
        <label>Posting Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reconciled_As_Of_Date__c</fullName>
        <label>Reconciled as of Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reconciled_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconciled Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <description>Check Number, etc</description>
        <label>Reference Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_Balance__c</fullName>
        <label>DEPRECATED</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source of Bank Transaction</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dataloader</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Yodlee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Bank_Transaction_Group__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubTransaction_Type__c</fullName>
        <label>Subtransaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transacted_With_Bank_Account__c</fullName>
        <description>Trading partner’s bank account</description>
        <label>DEPRECATED</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transacted_With_Description__c</fullName>
        <description>Additional info about trading partner</description>
        <label>DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transacted_With__c</fullName>
        <description>Merchant/Supplier/Customer name or number from feed</description>
        <label>Transacted With</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Date/time transaction cleared bank</description>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <description>To be populated from the Source system, it is the unique identifier for the record</description>
        <externalId>true</externalId>
        <label>Source Transaction ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>credit/debit/other/unknown</description>
        <label>Entry Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Source__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>credit</fullName>
                </value>
                <value>
                    <fullName>debit</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
                <value>
                    <fullName>unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Void_Date__c</fullName>
        <formula>Bank_Transaction_Group__r.Void_Date__c</formula>
        <label>Void Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Void__c</fullName>
        <formula>Bank_Transaction_Group__r.Void__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Void</label>
        <type>Checkbox</type>
    </fields>
    <label>Bank Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Payment_Method__c</columns>
        <columns>Reference_Number__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Transacted_With__c</columns>
        <columns>Amount__c</columns>
        <columns>Reconciled_As_Of_Date__c</columns>
        <columns>Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Transaction</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Amount_is_required_on_Bank_Transaction</fullName>
        <active>true</active>
        <description>Amount is required on Bank Transaction</description>
        <errorConditionFormula>OR(ISBLANK(Amount__c),
   Amount__c = 0)</errorConditionFormula>
        <errorMessage>Amount cannot be blank or zero. Please populate valid amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BT_can_not_be_added</fullName>
        <active>true</active>
        <description>Bank Transaction can&apos;t be added on finalized bank transaction group.</description>
        <errorConditionFormula>AND(Bank_Transaction_Group__r.Finalized__c = true,
ISNEW())</errorConditionFormula>
        <errorMessage>Can&apos;t add more Bank Transaction as it is already finalized.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_Account_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Bank_Account__c)</errorConditionFormula>
        <errorMessage>Please populate &apos;Bank Account&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_change_finalized_flag</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Finalized_2__c),
Finalized_2__c,
ISPICKVAL(Bank_Transaction_Group__r.Status__c, &apos;Cancelled&apos;))</errorConditionFormula>
        <errorMessage>Bank Transaction cannot be finalized if it is cancelled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_manually_unreconcile</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Reconciled_As_Of_Date__c) &amp;&amp;  Reconciled_Hidden__c = TRUE</errorConditionFormula>
        <errorMessage>Cannot un-reconcile manually.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_set_reconciled_date_if_unfinalized</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( Reconciled_As_Of_Date__c )) &amp;&amp;  Finalized__c = false</errorConditionFormula>
        <errorDisplayField>Reconciled_As_Of_Date__c</errorDisplayField>
        <errorMessage>Cannot set reconcile if bank transaction is not approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_set_reconciled_date_manually</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( Reconciled_As_Of_Date__c )) &amp;&amp;   Reconciled_Hidden__c  = false</errorConditionFormula>
        <errorDisplayField>Reconciled_As_Of_Date__c</errorDisplayField>
        <errorMessage>Cannot set reconcile manually</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Currency_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>Currency__c  = null</errorConditionFormula>
        <errorMessage>Please populate &apos;Currency&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transaction_Date_is_mandatory</fullName>
        <active>true</active>
        <description>Transaction Date is mandatory</description>
        <errorConditionFormula>OR(ISBLANK(Transaction_Date__c),
   ISNULL(Transaction_Date__c)
)</errorConditionFormula>
        <errorMessage>Please populate &apos;Transaction Date&apos;</errorMessage>
    </validationRules>
</CustomObject>